# bevy_ai_editor

./: .env  .env.example  .gitignore  Cargo.toml  MCP_FIRST_LINUX_REFACTOR_PLAN.md  README.md  oh-my-opencode-3.5.2.tgz  run_all.sh  run_editor.sh  run_game.cmd  run_game.sh  todos.json  verify_connection.py
.opencode/: config.json
apps/Axiom/: .env.example  Cargo.toml  README.md  index.html  inspect_bevy.cjs  package-lock.json  prometheus.yml  test_spawn.cjs  todos.json
apps/Axiom/.github/instructions/: memory.instruction.md
apps/Axiom/.sisyphus/notepads/Axiom/: learnings.md
apps/Axiom/db/: init.sql  schema.sql
apps/Axiom/docs/: CLOUDFLARE_WORKER.js  PROJECT_SUMMARY.md
apps/Axiom/examples/: proxy_check.rs
apps/Axiom/public/: wasm_notes.txt
apps/Axiom/src/: main.rs  types.rs
apps/Axiom/src/agent/: profiles.rs
apps/Axiom/src/llm/: gemini.rs  mod.rs
apps/Axiom/src/prompts/: conductor.rs  road_engineer.md  system_beast.md
apps/Axiom/src/tools/: ast_grep.rs  batch.rs  bevy.rs  locks.rs  mod.rs  search.rs  shell.rs  video.rs
apps/Axiom/src/ui/: chat.rs  file_tree.rs  input.rs  mod.rs  operations.rs  top_panel.rs
apps/axiom/: Cargo.toml
apps/axiom/.sisyphus/notepads/: issues.md
apps/axiom/.sisyphus/notepads/Axiom_Plan/: learnings.md
apps/axiom/.sisyphus/notepads/axiom_v1/: decisions.md
apps/axiom/docs/: ARCHITECTURE.md  CHANGELOG.md  DEV_LOG.md  PROGRESS.md
apps/axiom/resources/: README.txt
apps/axiom/resources/avatars/: README.txt
apps/axiom/src/: main.rs
apps/axiom/src/agent/: mod.rs
apps/axiom/src/prompts/: contexts.rs  mod.rs  system_beast.md
apps/axiom/src/tools/: bevy.rs  lsp.rs  multiedit.rs  todo.rs
apps/axiom/src/ui/: file_tree.rs  sidebar.rs
crates/bevy_ai_remote/: Cargo.toml
crates/bevy_ai_remote/src/: lib.rs
crates/bevy_bridge_core/: Cargo.toml
crates/bevy_bridge_core/src/: client.rs  config.rs  error.rs  lib.rs
crates/bevy_bridge_core/src/ops/: clear.rs  mod.rs  ping.rs  query.rs  raw.rs  spawn.rs  upload.rs
crates/bevy_bridge_core/src/types/: requests.rs  responses.rs
crates/bevy_mcp_server/: Cargo.toml
crates/bevy_mcp_server/src/: main.rs
crates/debugger_mcp_server/: Cargo.toml
crates/debugger_mcp_server/src/: main.rs
docs/: DEBUGGER_MCP_SETUP.md  DEBUGGER_MCP_TOOL_REFERENCE.md  MCP_SETUP_CODEX_OPENCODE.md  MCP_TOOL_REFERENCE.md
examples/simple_game/: Cargo.toml
examples/simple_game/src/: main.rs  player.rs
