[package]
name = "bevy_bridge_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
