[package]
name = "debugger_mcp_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debugger_mcp_server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
