[package]
name = "simple_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = true, features = ["dynamic_linking","dev"] }
bevy_dylib = { version = "0.18" }
# bevy_remote = "0.18"
# bevy_ai_remote = { path = "../../crates/bevy_ai_remote", features = ["debug_probe"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
